@@ -71,6 +71,15 @@ set to \code{500}.
 \end{funcdesc}
 
 
+The following attribute is defined:
+
+\begin{datadesc}{httpresponses}
+A mapping between HTTP status codes and the W3C names.
+
+Example: \code{urllib2.httpresponses[404]} is \code{'Not Found'}.
+\versionadded{2.5}
+\end{datadesc}
+
 The following exceptions are raised as appropriate:
 
 \begin{excdesc}{URLError}
